adding profile setup and login page stubs

--- a/app/views/general_mailer/general_email.html.erb
+++ b/app/views/general_mailer/general_email.html.erb
@@ -6,6 +6,9 @@
 					<div>
 						<span style="text-align:left;"><%= @body %></span>
 					</div>
+					<div style="padding-top:20px;">
+						<span style="text-align:left;"><%= @link %></span>
+					</div>
 				</div>
 			</div>
 		</td>	
