new production url for RDS

--- a/app/views/general_mailer/general_email.html.erb
+++ b/app/views/general_mailer/general_email.html.erb
@@ -1,5 +1,5 @@
 <div>
-	<span style="text-align:left;"><%= @body %></span>
+	<span style="text-align:left;"><%= raw @body %></span>
 </div>
 <div style="padding-top:20px;">
 	<span style="text-align:left;"><%= @link %></span>
